--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html>
     <head>
         <title>Module two solution</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="row">
+        <div class="row">
                <h1 id="title">Our Menu</h1>
-               <div class="col-lg-4 col-md-3 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-6 col-sm-12 boxes">
                   <h2 id="chicken-title">Chicken</h2>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum blanditiis mollitia rem provident consequatur quidem enim obcaecati harum, dignissimos in!</p>
                </div>
-               <div class="col-lg-4 col-md-3 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-6 col-sm-12 boxes">
                   <h2 id="beef-title">Beef</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eligendi obcaecati, maxime et magnam blanditiis sequi iste porro numquam ab, tempora quasi eum, illum nam.</p>
                </div>
-               <div class="col-lg-4 col-md-6 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-12 col-sm-12 boxes">
                   <h2 id="sushi-title">Sushi</h2>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto iusto tempora praesentium sequi voluptas beatae laboriosam, consequuntur tempore? Nemo error fugit, accusamus fugiat odit esse.</p>
                </div>
-            </div>
         </div>
     </body>
 </html>
