updated styles again

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <body>
         <div class="row">
                <h1 id="title">Our Menu</h1>
-               <div class="col-lg-4 col-md-6 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-6 col-sm-12 boxes box1">
                   <h2 id="chicken-title">Chicken</h2>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum blanditiis mollitia rem provident consequatur quidem enim obcaecati harum, dignissimos in!</p>
                </div>
-               <div class="col-lg-4 col-md-6 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-6 col-sm-12 boxes box2">
                   <h2 id="beef-title">Beef</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eligendi obcaecati, maxime et magnam blanditiis sequi iste porro numquam ab, tempora quasi eum, illum nam.</p>
                </div>
-               <div class="col-lg-4 col-md-12 col-sm-12 boxes">
+               <div class="col-lg-4 col-md-12 col-sm-12 boxes box3">
                   <h2 id="sushi-title">Sushi</h2>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto iusto tempora praesentium sequi voluptas beatae laboriosam, consequuntur tempore? Nemo error fugit, accusamus fugiat odit esse.</p>
                </div>
