--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <h1 id="title">Our Menu</h1>
         <div class="row">
-               <h1 id="title">Our Menu</h1>
                <div class="col-lg-4 col-md-6 col-sm-12 boxes box1">
                   <h2 id="chicken-title">Chicken</h2>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum blanditiis mollitia rem provident consequatur quidem enim obcaecati harum, dignissimos in!</p>
+                  <p>
+                    The chicken (Gallus gallus domesticus) is a domesticated subspecies of the red junglefowl originally from Southeastern Asia.
+                    Rooster or cock is a term for an adult male bird, and younger male may be called a cockerel. A male that has been castrated is a capon.
+                    An adult female bird is called a hen and a sexually immature female is called a pullet.   
+                  </p>
                </div>
                <div class="col-lg-4 col-md-6 col-sm-12 boxes box2">
                   <h2 id="beef-title">Beef</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eligendi obcaecati, maxime et magnam blanditiis sequi iste porro numquam ab, tempora quasi eum, illum nam.</p>
+                  <p>
+                    Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them.
+                    Since then, numerous breeds of cattle have been bred specifically for the quality or quantity of their meat.
+                    Today, beef is the third most widely consumed meat in the world, after pork and poultry    
+                  </p>
                </div>
                <div class="col-lg-4 col-md-12 col-sm-12 boxes box3">
                   <h2 id="sushi-title">Sushi</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto iusto tempora praesentium sequi voluptas beatae laboriosam, consequuntur tempore? Nemo error fugit, accusamus fugiat odit esse.</p>
+                  <p>
+                    Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanied by a variety of ingredients, such as seafood, often raw, and vegetables.
+                    Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari, or sumeshi.  
+                  </p>
                </div>
         </div>
     </body>
